update spring boot version

--- a/certificate-generator-web/src/main/resources/templates/LayoutPadrao.html
+++ b/certificate-generator-web/src/main/resources/templates/LayoutPadrao.html
@@ -14,14 +14,14 @@
 <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
 </head>
 <body>
-	<header layout:include="Cabecalho"></header>
+	<div th:insert="Cabecalho"></div>
 
 	<section layout:fragment="conteudo">
 		<p>Conteúdo principal</p>
 	</section>
 
 	<footer>
-		<p>v0.3</p>
+		<p>v0.4</p>
 	</footer>
 	<script th:src="@{/js/jquery-2.1.4.min.js}"></script>
 	<script th:src="@{/js/bootstrap.min.js}"></script>
